--- a/index.html
+++ b/index.html
@@ -222,11 +222,6 @@
 			</div>
 		</div>
 
-
-		<h3>Current as of Egg, Inc. version 1.4.1</h3>
-		<h3><a target="_blank", href="https://www.reddit.com/r/EggsInc/comments/54e0g9/epic_research_costs_calculator/">Click here</a> for discussion, suggestions, and feedback!</h3>
-		<div style="height: 20px;"></div>
-
 		<div class="modal">
 			<h2>Import/Export</h2>
 			<div class="innercontent">
@@ -238,6 +233,10 @@
 				</div>
 			</div>
 		</div>
+
+		<h3>Current as of Egg, Inc. version 1.4.1</h3>
+		<h3><a target="_blank", href="https://www.reddit.com/r/EggsInc/comments/54e0g9/epic_research_costs_calculator/">Click here</a> for discussion, suggestions, and feedback!</h3>
+		<h3><a target="_blank", href="https://github.com/SticklyMan/egginc-epic-research-calc/">It's on GitHub for some reason!</a></h3>
 	</script>
 
 
