Fix Internal Hatchery Sharing bonus label.

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 			costs: [250, 475, 700, 925, 1150, 1375, 1600, 1825, 2050, 2275],
 			title: "Internal Hatchery Sharing",
 			desc: "Full habs' internal hatcheries send +10% chicks to other habs",
-			bonusDesc: "+{VAL}%",
+			bonusDesc: "{VAL}% shared",
 			bonusVal: 10
 		},
 		internalHatcheryCalm: {
