striped the tables for readability

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 		td, th {
 			padding: 5px;
 		}
+    tbody tr:nth-child(odd) {
+      background-color: #e5e5e5;
+    }
 		.noborder {
 			border: none;
 		}
