added padding under 'future planning' golden egg form fields

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
 		.padleft {
 			margin-left: 25px;
 		}
+    .padbottom {
+      margin-bottom: 14px;
+    }
 
 		.showdesc { display: table-cell; }
 		.showbonus { display: table-cell; }
@@ -190,7 +193,7 @@
 		<div class="modal">
 			<h2>Future Planning</h2>
 			<div class="padright">
-				<div class="noselect inline right padleft">Golden Eggs <input type="number" min="0" id="goldeneggs" tabindex="52"></div>
+				<div class="noselect inline right padleft padbottom">Golden Eggs <input type="number" min="0" id="goldeneggs" tabindex="52"></div>
 				<button class="right" onclick="crackThePiggy()" tabindex="51">Crack Open</button>
 				<div class="noselect inline right">Piggy Bank <input type="number" min="0" id="piggybank" tabindex="50"></div>
 			</div>
