--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 	<title>Egg, Inc. Epic Research Costs Calculator</title>
 
 	<script src="underscore-min.js"></script>
+
+  <script
+    src="https://code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous">
+  </script>
+
 </head>
 <body>
 	<div id="content"></div>
