--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 		epicHatchery: {
 			costs: [2, 54, 107, 159, 212, 264, 317, 369, 422, 474, 527, 579, 632, 684, 737, 789, 842, 894, 947, 1000],
 			title: "Epic Hatchery",
-			desc: "Increase hatechery refill rate by 10%",
+			desc: "Increase hatchery refill rate by 10%",
 			bonusDesc: "+{VAL}%",
 			bonusVal: 10
 		},
