--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Egg, Inc. Epic Research Costs Calculator</title>
+	<title>Egg, Inc. Golden Egg Costs Calculator</title>
 
 	<script src="underscore-min.js"></script>
 
@@ -155,7 +155,7 @@
 
 	<!-- Template -->
 	<script type="text/template" class="template">
-		<h1>Egg, Inc. Epic Research Costs Calculator</h1>
+		<h1>Egg, Inc. Golden Eggs Costs Calculator</h1>
 		<div class="modal">
 			<h2>Current Statistics</h2>
 			<table id="stats-table">
@@ -257,7 +257,7 @@
 			</div>
 		</div>
 
-		<h3>Current as of Egg, Inc. version 1.7</h3>
+		<h3>Current as of Egg, Inc. version 1.9</h3>
 		<h3><a target="_blank", href="https://www.reddit.com/r/EggsInc/comments/87klhc/epic_research_costs_calculator_updated_for_17/">Click here</a> for discussion, suggestions, and feedback!</h3>
 		<h3>Join me on any contracts with 'royalphysique' if you like!</h3>
 		<h3><a target="_blank", href="https://github.com/SticklyMan/egginc-epic-research-calc/">It's on GitHub for some reason!</a></h3>
@@ -290,7 +290,6 @@
 			cheaperContractors: 0,
 			bustUnions: 0,
 			labUpgrade: 0,
-			siloQuality: 0,
 			siloCapacity: 0,
 			internalHatcherySharing: 0,
 			internalHatcheryCalm: 0,
@@ -302,7 +301,8 @@
 			transportationLobbyists: 0,
 			warpShift: 0,
 			prophecyBonus: 0,
-			holdToResearch: 0
+			holdToResearch: 0,
+			hyperloopStation: 0
 		},
 		increase: {
 			holdToHatch: 0,
@@ -314,7 +314,6 @@
 			cheaperContractors: 0,
 			bustUnions: 0,
 			labUpgrade: 0,
-			siloQuality: 0,
 			siloCapacity: 0,
 			internalHatcherySharing: 0,
 			internalHatcheryCalm: 0,
@@ -326,7 +325,8 @@
 			transportationLobbyists: 0,
 			warpShift: 0,
 			prophecyBonus: 0,
-			holdToResearch: 0
+			holdToResearch: 0,
+			hyperloopStation: 0
 		}
 	};
 	if (localStorage.userData === undefined) {
@@ -337,7 +337,7 @@
 	// Upgrade Data
 	var upgrades = {
 		holdToHatch: {
-			costs: [10, 36, 63, 90, 116, 143, 170, 196, 223, 250],
+			costs: [10, 45, 80, 115, 150, 185, 220, 255, 290, 325, 360, 395, 430, 465, 500],
 			title: "Hold to Hatch",
 			desc: "Hold chicken button +2 chickens per second",
 			bonusDesc: "+{VAL}/SEC",
@@ -351,7 +351,7 @@
 			bonusVal: 10
 		},
 		epicIntHatchery: {
-			costs: [25, 76, 127, 178, 230, 281, 332, 384, 435, 486, 538, 589, 640, 692, 743, 794, 846, 897, 948, 1000],
+			costs: [25, 155, 285, 415, 546, 676, 806, 936, 1067, 1197, 1327, 1457, 1588, 1718, 1848, 1978, 2109, 2239, 2369, 2500],
 			title: "Epic Int. Hatcheries",
 			desc: "Increase internal hatchery rate by 5%",
 			bonusDesc: "+{VAL}%",
@@ -365,49 +365,42 @@
 			bonusVal: 30
 		},
 		epicClucking: {
-			costs: [50, 100, 150, 200, 250, 300, 350, 400, 450, 500],
+			costs: [20, 282, 544, 806, 1068, 1330, 1592, 1854, 2116, 2378, 2641, 2903, 3165, 3427, 3689, 3951, 4213, 4475, 4737, 5000],
 			title: "Epic Clucking",
 			desc: "+0.1% egg value bonus for each running chicken",
 			bonusDesc: "+{VAL}% / chicken",
 			bonusVal: 0.1
 		},
 		epicMultiplier: {
-			costs: [10, 30, 50, 70, 90, 110, 130, 150, 171, 191, 211, 231, 251, 271, 291, 312, 332, 352, 372, 392, 412, 432, 452, 473, 493, 513, 533, 553, 573, 593, 614, 634, 654, 674, 694, 714, 734, 755, 775, 795, 815, 835, 855, 875, 895, 916, 936, 956, 976, 996, 1016, 1036, 1057, 1077, 1097, 1117, 1137, 1157, 1177, 1197, 1218, 1238, 1258, 1278, 1298, 1318, 1338, 1359, 1379, 1399, 1419, 1439, 1459, 1479, 1500],
+			costs: [10, 60, 110, 161, 211, 262, 312, 362, 413, 463, 514, 564, 614, 665, 715, 766, 816, 866, 917, 967, 1018, 1068, 1118, 1169, 1219, 1270, 1320, 1370, 1421, 1471, 1522, 1572, 1622, 1673, 1723, 1774, 1824, 1874, 1925, 1975, 2026, 2076, 2126, 2177, 2227, 2278, 2328, 2378, 2429, 2479, 2530, 2580, 2631, 2681, 2731, 2782, 2832, 2883, 2933, 2983, 3034, 3084, 3135, 3185, 3235, 3286, 3336, 3387, 3437, 3487, 3538, 3588, 3639, 3689, 3739, 3790, 3840, 3891, 3941, 3991, 4042, 4092, 4143, 4193, 4243, 4294, 4344, 4395, 4445, 4495, 4546, 4596, 4647, 4697, 4747, 4798, 4848, 4899, 4949, 5000],
 			title: "Epic Multiplier",
-			desc: "Increase max running chicken bonus by 0.2x!",
+			desc: "Increase max running chicken bonus by 1.0x!",
 			bonusDesc: "+{VAL}x MAX",
-			bonusVal: 0.2
+			bonusVal: 1
 		},
 		cheaperContractors: {
-			costs: [20, 73, 126, 180, 233, 286, 340, 393, 446, 500],
+			costs: [20, 240, 460, 680, 900, 1120, 1340, 1560, 1780, 2000],
 			title: "Cheaper Contractors",
-			desc: "Reduce hen house and silo build costs by 5%",
+			desc: "Reduce hen house build costs by 5%",
 			bonusDesc: "-{VAL}%",
 			bonusVal: 5
 		},
 		bustUnions: {
-			costs: [20, 73, 126, 180, 233, 286, 340, 393, 446, 500],
+			costs: [20, 240, 460, 680, 900, 1120, 1340, 1560, 1780, 2000],
 			title: "Bust Unions",
 			desc: "Reduce vehicle hire costs by 5%",
 			bonusDesc: "-{VAL}%",
 			bonusVal: 5
 		},
 		labUpgrade: {
-			costs: [25, 50, 75, 100, 125, 150, 175, 200, 225, 250],
+			costs: [25, 244, 463, 683, 902, 1122, 1341, 1561, 1780, 2000],
 			title: "Lab Upgrade",
 			desc: "Reduce research costs by 5%",
 			bonusDesc: "-{VAL}%",
 			bonusVal: 5
 		},
-		siloQuality: {
-			costs: [5, 11, 17, 23, 30, 36, 42, 48, 55, 61, 67, 74, 80, 86, 92, 99, 105, 111, 118, 124, 130, 136, 143, 149, 155, 162, 168, 174, 180, 187, 193, 199, 206, 212, 218, 224, 231, 237, 243, 250],
-			title: "Silo Quality",
-			desc: "Increase silo quality by 2%",
-			bonusDesc: "+{VAL}%",
-			bonusVal: 2
-		},
 		siloCapacity: {
-			costs: [100, 133, 166, 200, 233, 266, 300, 333, 366, 400],
+			costs: [500, 526, 552, 578, 605, 631, 657, 684, 710, 736, 763, 789, 815, 842, 868, 894, 921, 947, 973, 1000],
 			title: "Silo Capacity",
 			desc: "Increase away time per silo by 6 min",
 			bonusDesc: "+{VAL} min.",
@@ -428,14 +421,14 @@
 			bonusVal: 10
 		},
 		accountingTricks: {
-			costs: [25, 234, 443, 652, 861, 1071, 1280, 1489, 1698, 1907, 2117, 2326, 2535, 2744, 2953, 3163, 3372, 3581, 3790, 4000],
+			costs: [250, 447, 644, 842, 1039, 1236, 1434, 1631, 1828, 2026, 2223, 2421, 2618, 2815, 3013, 3210, 3407, 3605, 3802, 4000],
 			title: "Accounting Tricks",
 			desc: "Increase farm valuation by 5%",
 			bonusDesc: "+{VAL}%",
 			bonusVal: 5
 		},
 		soulFood: {
-			costs: [100, 128, 156, 184, 212, 240, 268, 296, 324, 352, 380, 408, 436, 464, 492, 520, 548, 576, 605, 633, 661, 689, 717, 745, 773, 801, 829, 857, 885, 913, 941, 969, 997, 1025, 1053, 1082, 1110, 1138, 1166, 1194, 1222, 1250, 1278, 1306, 1334, 1362, 1390, 1418, 1446, 1474, 1502, 1530, 1558, 1587, 1615, 1643, 1671, 1699, 1727, 1755, 1783, 1811, 1839, 1867, 1895, 1923, 1951, 1979, 2007, 2035, 2064, 2092, 2120, 2148, 2176, 2204, 2232, 2260, 2288, 2316, 2344, 2372, 2400, 2428, 2456, 2484, 2512, 2541, 2569, 2597, 2625, 2653, 2681, 2709, 2737, 2765, 2793, 2821, 2849, 2877, 2905, 2933, 2961, 2989, 3017, 3046, 3074, 3102, 3130, 3158, 3186, 3214, 3242, 3270, 3298, 3326, 3354, 3382, 3410, 3438, 3466, 3494, 3523, 3551, 3579, 3607, 3635, 3663, 3691, 3719, 3747, 3775, 3803, 3831, 3859, 3887, 3915, 3943, 3971, 4000],
+			costs: [500, 532, 564, 597, 629, 661, 694, 726, 758, 791, 823, 856, 888, 920, 953, 985, 1017, 1050, 1082, 1115, 1147, 1179, 1212, 1244, 1276, 1309, 1341, 1374, 1406, 1438, 1471, 1503, 1535, 1568, 1600, 1633, 1665, 1697, 1730, 1762, 1794, 1827, 1859, 1892, 1924, 1956, 1989, 2021, 2053, 2086, 2118, 2151, 2183, 2215, 2248, 2280, 2312, 2345, 2377, 2410, 2442, 2474, 2507, 2539, 2571, 2604, 2636, 2669, 2701, 2733, 2766, 2798, 2830, 2863, 2895, 2928, 2960, 2992, 3025, 3057, 3089, 3122, 3154, 3187, 3219, 3251, 3284, 3316, 3348, 3381, 3413, 3446, 3478, 3510, 3543, 3575, 3607, 3640, 3672, 3705, 3737, 3769, 3802, 3834, 3866, 3899, 3931, 3964, 3996, 4028, 4061, 4093, 4125, 4158, 4190, 4223, 4255, 4287, 4320, 4352, 4384, 4417, 4449, 4482, 4514, 4546, 4579, 4611, 4643, 4676, 4708, 4741, 4773, 4805, 4838, 4870, 4902, 4935, 4967, 5000],
 			title: "Soul Food",
 			desc: "Increase bonus per soul egg by +1%",
 			bonusDesc: "+{VAL}%",
@@ -449,7 +442,7 @@
 			bonusVal: 10
 		},
 		droneRewards: {
-			costs: [100, 357, 615, 873, 1131, 1389, 1647, 1905, 2163, 2421, 2678, 2936, 3194, 3452, 3710, 3968, 4226, 4484, 4742, 5000],
+			costs: [100, 200, 300, 400, 500, 600, 700, 800, 900, 1000, 1100, 1200, 1300, 1400, 1500, 1600, 1700, 1800, 1900, 2000],
 			title: "Drone Rewards",
 			desc: "Increase your chances for bigger drone rewards by 10%",
 			bonusDesc: "+{VAL}%",
@@ -489,6 +482,13 @@
 			desc: "Increase repetition rate when holding down research button by 25%",
 			bonusDesc: "+{VAL}%",
 			bonusVal: 25
+		},
+		hyperloopStation: {
+			costs: [25000],
+			title: "Hyperloop Train",
+			desc: "Purchasing Hyperloop trains requires you to first construct a hyperloop station",
+			bonusDesc: "✓",
+			bonusVal: 0
 		}
 	};
 
