Improve button styling. Thanks to /u/Terr4360 for the idea!

--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@
 		}
 		.buttonrow button {
 			font-size: 18px;
-			padding: 4px;
 		}
 
 		.padright {
@@ -141,6 +140,25 @@
 
 		#exportfield {
 			resize: vertical;
+		}
+
+		button {
+			cursor: pointer;
+			font-size: 16px;
+			color: white;
+			background-color: #19AD01;
+			border-radius: 5px;
+			padding: 2px 15px;
+			margin: 0px 3px;
+			border: 0;
+		}
+
+		button:active {
+			opacity: 0.6;
+		}
+
+		button[disabled] {
+			background-color: #7F7F7F;
 		}
 	</style>
 
