Add hopefully helpful note that the Epic % Discount is part of an occasional event.
 - Removed my contract room as some cheaters frequent it. Find me on Reddit or Discord instead!
 - Updated contributers
 - Updated reddit links

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 				<% }); %>
 			</table>
 			<div class="innercontent" style="margin-top: 20px;">
-				<div class="noselect inline right">Epic % Discount <input type="number" min="0" max="100" id="epicdiscount" tabindex="52"style="width: 38px"></div>
+				<div class="noselect inline right">Epic % Discount (event) <input type="number" min="0" max="100" id="epicdiscount" tabindex="52"style="width: 38px"></div>
 			</div>
 			<div class="innercontent clear" style="margin-bottom: 20px;">
 				<div class="left">Desired Upgrade Cost: <b id="fut-upgrade-total"></b></div>
@@ -276,8 +276,7 @@
 		</div>
 
 		<h3>Current as of Egg, Inc. version 1.9</h3>
-		<h3><a target="_blank", href="https://www.reddit.com/r/EggsInc/comments/87klhc/epic_research_costs_calculator_updated_for_17/">Click here</a> for discussion, suggestions, and feedback!</h3>
-		<h3>Join me on any contracts with 'royalphysique' if you like!</h3>
+		<h3><a target="_blank", href="https://www.reddit.com/r/EggsInc/comments/bp7zms/epic_research_golden_eggs_costs_calculator/">Click here</a> for discussion, suggestions, and feedback!</h3>
 		<h3><a target="_blank", href="https://github.com/SticklyMan/egginc-epic-research-calc/">It's on GitHub for some reason!</a></h3>
 	</script>
 
